@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Delegate to Mojo::Reactor::Poll again method to support changing invocation time of active timers in Mojolicious 8.37+
 
 0.009     2019-10-02 12:07:34 EDT
   - Defer creation of the epoll handle until the loop is started to support preforking use cases like Hypnotoad (#4, leonerd)
